--- a/haztesocio.css
+++ b/haztesocio.css
@@ -26,7 +26,7 @@ header h1 {
 }
 
 nav {
-  margin: 10px auto;
+   margin: 10px auto 5px;
 }
 
 nav ul {
@@ -43,8 +43,8 @@ nav ul li a {
   color: #fff;
   text-decoration: none;
   font-weight: bold;
-  font-size: 1.2em;
-  padding: 10px 16px;
+  font-size: 1.1em;
+  padding: 8px 14px;
   font-family: 'Montserrat', sans-serif;
 }
 
