--- a/inicio.css
+++ b/inicio.css
@@ -165,6 +165,7 @@ nav ul li a.activo {
     width: 100%;
     height: 420px;
     object-fit: cover;
+    object-position: center top;
     display: block;
 }
 
